--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Resume Builder</title>
+    <title>GTR Resume Builder</title>
 </head>
 <body>
     <div id="root">
