--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png/ico" href="../public/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Professional Resume Builder - Create stunning resumes and cover letters" />
     <meta name="keywords" content="resume, cv, cover letter, job application, professional" />
@@ -13,7 +13,7 @@
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
-    <title>Resume Builder App</title>
+    <title>GTR Resume Builder</title>
   </head>
   <body>
     <div id="root"></div>
