2 Page Added Policy

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png/ico" href="../public/favicon.ico">
+    <link rel="icon" type="image/png/ico" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Professional Resume Builder - Create stunning resumes and cover letters" />
+    <meta name="description" content="Professional GTR Academy Resume Builder - Create stunning resumes and cover letters" />
     <meta name="keywords" content="resume, cv, cover letter, job application, professional" />
     
     <!-- Preload Poppins font for better performance -->
